# rag-pipeline

./: .gitignore  drizzle.config.ts  package.json
backend/: README.md  db.py  main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/rag/: ingest.py  pipeline.py
backend/eval/: README.md  evaluate.py  test_set.json
frontend/: components.json  next.config.ts  package.json  skills-lock.json
frontend/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/upload/: actions.ts  page.tsx
frontend/src/components/: navigation.tsx
frontend/src/components/ai-elements/: checkpoint.tsx  commit.tsx  confirmation.tsx  environment-variables.tsx  image.tsx  inline-citation.tsx  package-info.tsx  sandbox.tsx  schema-display.tsx  stack-trace.tsx  terminal.tsx  voice-selector.tsx
frontend/src/lib/: db-config.ts  db-schema.ts  embeddings.ts  migrate.ts  search.ts
migrations/: 0001_skinny_sebastian_shaw.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src/: proxy.ts
src/app/: layout.tsx
src/app/chat/: page.tsx
src/components/: navigation.tsx
src/components/ai-elements/: agent.tsx  artifact.tsx  context.tsx  file-tree.tsx  jsx-preview.tsx  mic-selector.tsx  persona.tsx  snippet.tsx  speech-input.tsx  test-results.tsx  transcription.tsx  web-preview.tsx
src/components/ui/: accordion.tsx  tabs.tsx
src/lib/: chunking.ts  db-config.ts  db-schema.ts  embeddings.ts  eval-dataset.ts  eval.ts  migrate.ts
(+5 files in other folders)
