[project]
name = "backend"
version = "0.1.0"
description = "FastAPI RAG pipeline backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "llama-index",
    "llama-index-vector-stores-postgres",
    "llama-index-retrievers-bm25",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai",
    "psycopg2-binary",
    "pydantic-settings>=2.13.1",
]
